# locvec

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/bridge/: ivf_allocator.c  ivf_wrapper.c
src/cuda/: ivf_cuda_backend.cu  kmeans_trainer.cu
src/locvec/: __init__.py  localvec.py
